fixed layout issue with different screen ratios

--- a/my-portfolio/src/styles/Home.css
+++ b/my-portfolio/src/styles/Home.css
@@ -218,14 +218,14 @@ body {
         grid-template-columns: auto;
     }
 
+    .img-section {
+        min-height: 780px;
+    }
+
  }
 
  /* Small devices (portrait tablets and large phones, 600px and up) */
  @media only screen and (min-width: 601px) {
-    
-    .img-section {
-        min-height: 920px;
-    }
 
     .name-title{
         font-size: clamp(10px, 4.9vw, 55px);
@@ -336,11 +336,17 @@ body {
         grid-template-columns: auto auto auto;
     }
 
+    .img-section {
+        min-height: 900px;
+    }
+
  }
  
  /* Medium devices (landscape tablets, 768px and up) */
  @media only screen and (min-width: 768px) {
-
+    .img-section {
+        min-height: 1050px;
+    }
  }
  
  /* Large devices (laptops/desktops, 992px and up) */
@@ -350,11 +356,19 @@ body {
         margin-top: 3vw;
     }
 
+    .img-section {
+        min-height: 1200px;
+    }
+
  }
  
  /* Extra large devices (large laptops and desktops, 1200px and up) */
  @media only screen and (min-width: 1200px) {
     
+    .img-section {
+        min-height: calc(100vw/ 2.4);
+    }
+
     .name-title{
         font-size: clamp(10px, 3.25vw, 90px);
         margin-bottom: 0;
